--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Rubik:regular,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:700,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" href="img/favicon.ico">
 	<title>GoCorona</title>
 </head>
 
