Add gradient scroller

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+	<div class="scroller-white scroller"></div>
+	<div class="scroller-gradient scroller"></div>
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container _container">
@@ -194,7 +196,7 @@
 				</div>
 			</section>
 		</main>
-		
+
 		<footer class="footer">
 			<div class="footer__container _container">
 				<div class="footer__item">
