--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <body>
 	<h1 align="center">404 Not Found</h1>
 	<hr>
-	<div align="center">Пошёл на хуй :(</div>
+	<div align="center"><a href="index.html">Вернуться на главную</a></div>
 </body>
 
 </html>
