--- a/404.html
+++ b/404.html
@@ -6,13 +6,26 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:500,800&display=swap">
+	<link rel="stylesheet" href="css/404.css">
+	<link rel="icon" href="img/404/favicon.ico">
 	<title>404 error</title>
 </head>
 
 <body>
-	<h1 align="center">404 Not Found</h1>
-	<hr>
-	<div align="center"><a href="index.html">Вернуться на главную</a></div>
+	<div class="wrapper">
+		<section class="main-block container">
+			<div class="main-block__text">
+				<h1 class="main-block__title">404 Not found</h1>
+				<div class="main-block__button-wrapper">
+					<a href="index.html" class="main-block__button">На главную</a>
+				</div>
+			</div>
+			<figure class="main-block__cat">
+				<img src="img/404/cat.gif" alt="Cat">
+			</figure>
+		</section>
+	</div>
 </body>
 
 </html>
