--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<link href="https://fonts.googleapis.com/css?family=Rubik:regular,700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:700,800&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:regular,700&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700,800&display=swap">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="img/favicon.ico">
 	<title>GoCorona</title>
 </head>
 
 <body>
-	<div class="scroller-white scroller"></div>
+	<div class="scroller-shadow scroller"></div>
 	<div class="scroller-gradient scroller"></div>
+
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container _container">
