--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						</div>
 						<div class="experts__video video-experts">
 							<div class="video-experts__body">
-								<iframe src="https://www.youtube.com/embed/AiJbA-81Pew?controls=0" title="Zero-two" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe src="https://www.youtube.com/embed/oy2zDJPIgwc?si=WxDkSIGp64Mq6I9E" title="Mozart" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
